--- a/app/src/css/main.scss
+++ b/app/src/css/main.scss
@@ -1,32 +1,41 @@
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss";
 @import "../fonts/fontello/css/icon-embedded.css";
 @import "../fonts/fontello/css/icon-codes.css";
 
-$border-color: $gray-lighter;
+@import "abstracts/variables";
+@import "abstracts/mixins";
 
-.list-options,
-.list-favorites {
-  border-left: 1px solid $border-color;
-  border-right: 1px solid $border-color;
-  line-height: 30px;
+@import "components/Icon";
+@import "components/Button";
+@import "components/List";
+
+@import "layout/Grid";
+@import "layout/Container";
+
+@import "utils/utils-layout";
+@import "utils/utils-text";
+
+html {
+  font-family: Helvetica, Arial, Tahoma, sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
 }
 
-.list-item {
-  cursor: pointer;
-  padding: 10px;
-  border-bottom: 1px solid $border-color;
-
-  &:first-child {
-    border-top: 1px solid $border-color;
-  }
-
-  > .icon {
-    width: 23px;
-  }
+h1 {
+  margin: 2rem 0;
 }
 
 #app {
-  margin: 30px 0;
+  p {
+    margin-bottom: 1rem;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  * {
+    box-sizing: border-box;
+  }
 
   .icon {
     padding-right: 10px;
